--- a/style.css
+++ b/style.css
@@ -68,3 +68,16 @@ footer {
     width: 100%;
     bottom: 0;
 }
+.back-button {
+  display: inline-block;
+  margin: 10px 0;
+  padding: 8px 16px;
+  background-color: #333;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 4px;
+}
+
+.back-button:hover {
+  background-color: #555;
+}
